fix write-tree